<resources>
    <string name="reset">reset</string>
    <string name="login">login</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="username">Username</string>
    <string name="app_name">CAT2</string>
    <string name="welcome">Welcome!</string>
    <string name="home">Home</string>
    <string name="dashboard">Book Now</string>
    <string name="exit">Exit</string>
    <string name="Description">here is your favorite Kitchen is here.
    </string>
    <string name="kentisbury_grange">Cloud Kitchen</string>
    <string name="address">
        \t Cloud Kitchen,Bangalore
        \n\t Karnataka, India.\n
        \n\t Contact us: +91 7619413700
    </string>
    <string name="book_now">Book Now</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="select_room">Select food type</string>
    <string name="select_date_and_time">Select Date and Time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="inspired_lodges">Testy Foods</string>
    <string name="booking_details">Booking Details</string>

    <string-array name="rooms">
        <item>Veg</item>
        <item>Non-Veg</item>
    </string-array>
</resources>